--- a/project_scrum/views/project_views.xml
+++ b/project_scrum/views/project_views.xml
@@ -41,7 +41,11 @@
         <field name="arch" type="xml">
             <form string="Sprint">
                 <header>
-                    <field name="stage" widget="statusbar" statusbar_visible="draft,active,review,done"/>
+                    <button name="action_start" type="object" class="btn-primary" string="Start Sprint" attrs="{'invisible': [('state', '!=', 'draft')]}"/>
+                    <button name="action_review" type="object" class="btn-primary" string="Sprint Review" attrs="{'invisible': [('state', '!=', 'active')]}"/>
+                    <button name="action_done" type="object" class="btn-primary" string="Finish Sprint" attrs="{'invisible': [('state', '!=', 'review')]}"/>
+                    <button name="action_draft" type="object" string="Back to Planning" attrs="{'invisible': [('state', '!=', 'cancel')]}"/>
+                    <button name="action_cancel" type="object" string="Cancel" attrs="{'invisible': [('state', 'in', ['draft', 'done', 'cancel'])]}"/>                    <field name="state" widget="statusbar" statusbar_visible="draft,active,review,done"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
